--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "python.pythonPath": "/usr/bin/python3",
-    "python.linting.enabled": true
+    "python.pythonPath": "C:\\Program Files (x86)\\Python37-32\\python.exe",
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": true
 }
